# get-started-rust

./: LICENSE  README.md
invaders-game/: Cargo.toml
invaders-game/src/: lib.rs  main.rs  player.rs  render.rs  shot.rs
