[package]
name = "invaders-game"
version = "0.1.0"
edition = "2021"
description = "Open source terminal arcade game with audio - based off of the classic 'Space Invaders'"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
rusty_audio = "1.2"
rusty_time = "1.1.0"
